--- a/style.css
+++ b/style.css
@@ -870,3 +870,93 @@ body, html {
   letter-spacing: 2.5px;
   color: rgba(27, 20, 20, 0.815);
 }
+
+.about-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+.about-row {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.about-col {
+  flex: 0 0 calc(33.3333% - 20px);
+  margin: 10px;
+  text-align: center;
+}
+.about-col-md-7,
+.about-col-md-5 {
+    flex: 0 0 calc(50% - 20px);
+    margin: 10px;
+    text-align: center;
+}
+
+.about-img {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+}
+
+.about-divider {
+  margin: 10px 0;
+  border-top: 1px solid #eee;
+}
+
+/* Add media queries for responsiveness */
+@media (max-width: 768px) {
+  .about-col {
+      flex: 0 0 calc(50% - 20px);
+  }
+}
+
+.about-container {
+
+  color: rgba(27, 20, 20, 0.63);
+  box-sizing: border-box;
+}
+
+/* Update the border color for the rows */
+.about-row {
+  border: 30px solid rgba(241, 98, 98, 0.329);
+ 
+  
+}
+
+/* Update the color for section headings */
+.about-featurette-heading {
+  color: rgba(27, 20, 20, 0.815);
+}
+
+.climb-img,
+.pets-img,
+.mtn-img,
+.flute-img {
+  border-radius: 20%;
+}
+
+.heb, .mck, .bain {
+  background-color: rgba(241, 98, 98, 0.329);
+  color: white;
+  font-weight: bold;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: monospace;
+  font-size: 16px;
+  margin: 5px;
+  transition: background-color 0.3s ease;
+  
+}
+
+/* Change the color on hover */
+.heb:hover, .mck:hover, .bain:hover {
+  background-color: rgba(241, 98, 98, 0.685);
+  color: rgb(0, 0, 0);
+}
+
